--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="menu"><img src="./Assets/menu.svg" alt=""></div>
       </nav>
       <div class="homepage">
-        <video autoplay loop src="./Assets/course-video.mp4"></video>
+        <video autoplay loop muted src="./Assets/course-video.mp4"></video>
         <div class="content">
           <p>GRADUATE SCHOOL OF MANAGEMENT</p>
           <h1><span style="color: rgb(255, 255, 2)">YOUR</span> CLASSROOM</h1>
